tests/files/lexer_tests/should_fail/092.cmdr
//Should not parse due to missing lparen
for i = 0; i < 10; i++) echo hi;